[package]
name = "dyadic-rust"
version = "0.1.0"
edition = "2021"
description = "Binary and Dyadic rational expressions in Rust"
license-file = "LICENSE"
keywords = ["algebra", "dyadic", "mathematics", "number theory", "rational numbers"]

[dependencies]
arbitrary = { version = "1.3.2", features = ["derive"] }
arbtest = "0.3.1"
hashconsing = "1.6.0"
pretty = "0.12.3"
thiserror = "1.0.65"

