[package]
name = "dyadic-rationals"
version = "0.1.0"
edition = "2021"
description = "Binary and Dyadic rational expressions in Rust"
license-file = "LICENSE"
keywords = ["algebra", "dyadic", "mathematics", "symbolic" ]

[dependencies]
pretty = "0.12.3"

[dev-dependencies]
arbtest = "0.3.1"
arbitrary = { version = "1.3.2", features = ["derive"] }
