[package]
name = "dyadic-rationals"
version = "0.1.2"
edition = "2021"
description = "Binary and Dyadic rational expressions (with binders) in Rust"
license-file = "LICENSE"
keywords = ["algebra", "dyadic", "mathematics", "symbolic" ]

[dependencies]
itertools = "0.13.0"
pretty = "0.12.3"
thiserror = "1.0.30"

[dev-dependencies]
arbtest = "0.3.1"
arbitrary = { version = "1.3.2", features = ["derive"] }
